# ChangeLog for net-misc/freerdp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/freerdp/ChangeLog,v 1.79 2014/11/26 00:04:20 floppym Exp $

  26 Nov 2014; Mike Gilbert <floppym@gentoo.org>
  freerdp-1.2.0_beta1_pre20141115.ebuild, freerdp-9999.1.ebuild:
  Drop support for the unmaintained directfb option, bug 530680.

*freerdp-1.2.0_beta1_pre20141115 (17 Nov 2014)

  17 Nov 2014; Mike Gilbert <floppym@gentoo.org>
  +freerdp-1.2.0_beta1_pre20141115.ebuild, freerdp-9999.1.ebuild:
  New snapshot.

  12 Nov 2014; Justin Lecher <jlec@gentoo.org>
  freerdp-1.1.0_beta1_p20130710-r2.ebuild,
  +files/freerdp-1.1.0_beta1_p20130710-cmake.patch, metadata.xml:
  Fix usage of internal cmake modules, #527700

  20 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +files/freerdp-1.1.0_beta1_p20130710-uclibc.patch,
  freerdp-1.1.0_beta1_p20130710-r2.ebuild:
  Add build fix for uclibc, bug 497808. Thanks to René Rhéaume for the patch.

*freerdp-1.1.0_beta1_p20130710-r2 (06 Aug 2014)

  06 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +freerdp-1.1.0_beta1_p20130710-r2.ebuild:
  Backport usb changes from live ebuild.

  06 Aug 2014; Mike Gilbert <floppym@gentoo.org> freerdp-9999.1.ebuild:
  Add usb use flag to enable USB redirection support, bug 518798 by Francisco
  Javier. Drop channels flag and just build them always.

  20 Jul 2014; Mike Gilbert <floppym@gentoo.org>
  freerdp-1.1.0_beta1_p20130710-r1.ebuild:
  Fix pulseaudio flag.

  20 Jul 2014; Mike Gilbert <floppym@gentoo.org> freerdp-9999.1.ebuild:
  Fix gstreamer and pulseaudio flags.

  05 Jul 2014; Mike Gilbert <floppym@gentoo.org> -freerdp-1.1.0_beta1.ebuild,
  -freerdp-1.1.0_beta1_p20130605.ebuild, -freerdp-1.1.0_beta1_p20130710.ebuild:
  Remove old versions for bug 511688.

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org>
  freerdp-1.1.0_beta1_p20130710-r1.ebuild:
  Stable for ppc, wrt bug #511688

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org>