@@ -10,14 +10,14 @@ DIST freerdp-1.1.0_beta1_p20130710.tar.gz 6682149 SHA256 0d0d2eec7e78b61458415ee
 DIST freerdp-1.2.0_beta1_pre20141115.tar.gz 6096004 SHA256 a9dcd76946878cecddafc79a14794e7f57cb32397b5bc45af9d866d8d76bb421 SHA512 8fdbfba86df2cbb6c980e940df66bf30cd8d06e66df18656e18a120eabdd2b17e78c7612f1349589fcd8d3b37066b3956e0ef977d069f2abde653b4824fee61b WHIRLPOOL 0c0bb6c2a9e0b0efd072d0c46ded4790b69df649fe1e18bd907458e238a8149314ca47e5166523044c14a520e8f1d0d5b910e294c4ee670c1562c7980036cbb0
 EBUILD freerdp-1.1.0_beta1_p20130710-r1.ebuild 2626 SHA256 3975fa6ba078b3e370d2113f660cdff871182df97ea2e963fdac25f3ad0c94a9 SHA512 1f494783cb7f7864aae27a7373fae32f17e140ced832aae0e4be63960a4897355bdd21e40074386b957e374710e825a7ccc1a7f7328087741d7a8fc1d0cb94f8 WHIRLPOOL 656aaa4f9932403db42fd4aad3d7ff56613b78f14c516dfccc1aaf185027b0ee81501791138580435cdf3bdef32b27cd6ce0ffba875a2dd63b0b47b34a810b77
 EBUILD freerdp-1.1.0_beta1_p20130710-r2.ebuild 2810 SHA256 e03e7655dc1ad45ee8e2cc8a9ec0da09a5a1ee28cf65c27a46b316f0ae621bd9 SHA512 b8a3bf63b81a1c28e15ecea4a07cf5542b9125d2fbc45e6fbff0db230315500e499f1b215b2b02433bd6e2658ad2d20a06dfa6a065ea4e5b6d7bce58541de2bc WHIRLPOOL ca0548877999b72e1842d90fded3af789866e257c770751e1c4cd185e6da97a1b722e9967fa1eb95ac88b7f6b70c9bc479f96c9bfb4aa0ef779e66a96b48e251
-EBUILD freerdp-1.2.0_beta1_pre20141115.ebuild 2561 SHA256 79fbd28ddf8c0f1a31099d9e183f38076ae1c74beb819651f0c79402529f05a1 SHA512 27b8da5f42f7ec640677d68132715a747ca66fc3b229319c876b2f5e14823895645492e404889082a04e038e351c444005e056374bbc8bb16babbcd081b84e99 WHIRLPOOL 044321468c5843c9fc8289a2c4c7c8fa0352d47ccca08eb4085075ce9bb5d5c87c579a334f4520d36fddd3d6a158bea0531358f7802e5739e98f6b9c16f4307f
-EBUILD freerdp-9999.1.ebuild 2545 SHA256 7ba96de9485eb3ab84612fec3bea54ca09a460de825e444e4310226ea556a0c6 SHA512 8d955bdfa7d15d1767aa519eadb0f91647890e6b42d9b5b8cc260edb6d7f5f5d735c5d0242f1ec1f614c13cfff3213ae9280ff0da33b7f95e8bfdd355102c79e WHIRLPOOL 4d63be3e1cc911165b78d40d5df5e424519bc416de6f3b075f3711164d65a8e5aa3c256603622f218b845d6ed3bdb1f38af9fe480ed1ce36ca9cff3b6344595c
-MISC ChangeLog 12611 SHA256 70c45f3a184e873b25813bbf5f3cf943f4eb1c2f7f592433e6cc8129aabcf36d SHA512 a8b20adcd405096f05015cf8843be78146b9ebcacd8a1bf2c44bff2132848d9afd4f9deb848aba1d3742d74c3fcaac5183119b9ec0033d2e4212abea083ecbee WHIRLPOOL b55934f481fa64b1dd01db26ef606dc037ce286295f1dda9fcc2f97e3ebfb0797126fdf071773fb4f8addeb14ef7bf7b7c32d4c7e39a9dab86b0043c9dd11178
+EBUILD freerdp-1.2.0_beta1_pre20141115.ebuild 2552 SHA256 8ebeaf9aa9f6da3b26783a0ac2008084028ca9f07bd8e14b1c1c37c889d1437e SHA512 f15de84c8e2ff41e3fcc58462f1ef0dbdc76b0f60cbb4fe504bfb9c3090475e9fb8ff86ffa49464dae4c6d84640108706477c405f200723abd29ca5f02e19535 WHIRLPOOL 03f7556dc618069e501280cbe4d04eda841bb34ad47894a41bc6715c0423f5e9721e6b632007826bf2e0f056207d25a4ed2855dd09339b5fafe9f0b5aaa6f311
+EBUILD freerdp-9999.1.ebuild 2536 SHA256 dbcdefec7af828ecb76e5aaf473564ac44c339529d7064bef4a0da120dffe2d5 SHA512 08c9ccc87f6adb269b83e022c2143f2737f7e418260ed80668898a50e4d3e77ce44e07039be5571f73fada7de766f6370852105304f9f3961d41bd79e372ced7 WHIRLPOOL 52c0a99f7b3672ebbf8d1a9b38571024e1286a5839cf26226c1477e4a4af623276bb4d04b0552cffb8866e2b5e3dd2221cef9d5db1d9b1662efbebc391ab494e
+MISC ChangeLog 12755 SHA256 ee192d2c2da95e8a0af2ac75435f2dc5abeb5820565deaa4e16b03915af51f9d SHA512 7c0a914b574db55800691ff8b7f05f6348f9fea367e2b8474942ee3bbe7b03956c0a42e2f33d539a78ce6eebf2c097905ca91986ccca6bfaeb46284f85cd4870 WHIRLPOOL fae115f9039d03e04fdccbcd43e5463691db6cf9baecae89ba704a4308b7ca934a30edf2f11053ee75dda89c1273640bacbb06f0e570fb472e5b11f69fa9f1f9
 MISC metadata.xml 424 SHA256 677d4fb3c378ea8ee9c4e340b7b32cf57a9f4fe9b92edddb42ddd39448f73f01 SHA512 4f1bb050f9b9889422c2e86b87dd43246b41cf45c1ce4e6c05e1c477c4a3031c20820edfd648cbc4ba2b61d2bae40883fcd5676246a0bc3fe767f5713701cf54 WHIRLPOOL d3ad68eadaf540d6200dc6a15ee3fe3597f80a64c1d2f8b7d22b23fb137422fda2edca1a8438800b31cd5d5dfd74dca23f611ad433b812f8bfe1ac0f1aa85b11
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlR1GQUACgkQC77qH+pIQ6Q+kgD9F99oYDOpkbaHYbhhXeUEOQqe
-KY18IdNTBJvcXbGaDfEA/ixpzt8thcm4fZCC+iSwZL7wwjpWKpSEfhNtq9trHg13
-=8Vgi
+iF4EAREIAAYFAlR1JikACgkQC77qH+pIQ6R/wgD9F1LH4W8Rumfw9fXd3k1/v4t+
+RhhfLYbGLYooddaHXsIBAKS2u3p43Vije25KM6JG07c56VK3PhJVFYBstu8Pr6Qk
+=mZaV
 -----END PGP SIGNATURE-----
