@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/freerdp
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/freerdp/ChangeLog,v 1.79 2014/11/26 00:04:20 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/freerdp/ChangeLog,v 1.80 2014/11/26 01:00:24 floppym Exp $
+
+  26 Nov 2014; Mike Gilbert <floppym@gentoo.org>
+  freerdp-1.2.0_beta1_pre20141115.ebuild, freerdp-9999.1.ebuild:
+  Remove directfb from IUSE.
 
   26 Nov 2014; Mike Gilbert <floppym@gentoo.org>
   freerdp-1.2.0_beta1_pre20141115.ebuild, freerdp-9999.1.ebuild:
